# ml_course

./: Lab 1a - Linear Models for Regression.ipynb  pyproject.toml
labs/: Lab 1b - Linear Models for Classification.ipynb  Lab 2 - Model Evaluation.ipynb  Lab 3a - Ensembles.ipynb  Lab 3b - Pipelines.ipynb  delete.ipynb
labs_solutions/: Lab 1a - Linear Models for Regression Solution.ipynb  Lab 1b - Linear Models for Classification Solution.ipynb  Lab 2 - Model Evaluation Solution.ipynb  Lab 3a - Ensembles Solution.ipynb  Lab 3b - Pipelines Solution.ipynb
